@@ -418,6 +418,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7066: archive_util.make_archive now restores the cwd if an error is 
+  raised. Initial patch by Ezio Melotti.
+
 - Issue #6218: io.StringIO and io.BytesIO instances are now picklable with
   protocol 2.
 
